# ledger-auditor

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  EXTENDING.md  LAB_NOTES.md
scripts/: generate_data.py
src/ledger_auditor/: __init__.py  agent.py  cli.py  evaluate.py  ingest.py  models.py  retrieval.py  tools.py
tests/: conftest.py  test_ingest.py  test_retrieval.py  test_tools_and_eval.py
