[project]
name = "ledger-auditor"
version = "0.1.0"
description = "Agentic RAG system that audits personal financial documents against each other"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "pdfplumber>=0.11",
    "reportlab>=4.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dense = ["sentence-transformers>=3.0"]
dev = ["pytest>=8.0"]

[project.scripts]
ledger-auditor = "ledger_auditor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ledger_auditor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
